# MOPSI

./: README.md  cellules.cpp  cellules.cpp~  cellules.h  cellules.h~  estimateurs.cpp  estimateurs.cpp~  estimateurs.h  estimateurs.h~  main.cpp  outils.cpp  outils.cpp~  outils.h  outils.h~
Initial/: CMakeLists.txt  cellules.cpp  cellules.h  estimateurs.cpp  estimateurs.h  main.cpp  outils.cpp  outils.h
Results/: Histo Prop 35 Légende.psd  Histo Prop 36 Légende.psd
